# bostad

./: README.md  benchmark.py  introspect.py  sample-response.json  test_resp.html
.github/: copilot-instructions.md
backend/: benchmark_qasa.py  live_benchmark.py  live_benchmark_qasa.py  probe_qasa.py  probe_qasa_v2.py  probe_qasa_v3.py  probe_qasa_v4.py  pyproject.toml  ruff.toml
backend/app/: geo.py  listings_cache.py  logging_config.py  main.py  models.py  scrape_bostadsthlm.py
backend/app/http/: __init__.py  client.py
backend/app/scraping/: __init__.py  core.py  registry.py  scrape_utils.py  types.py
backend/app/scraping/sources/: __init__.py  bostadsthlm.py  homeq.py  qasa.py
backend/tests/: test_bostadsthlm_source.py  test_homeq_source.py  test_listings_cache.py  test_main.py  test_models.py  test_qasa_source.py  test_scraping_core.py
backend/tests/data/bostadsthlm/: multiunit_202608114_loggedout.html  regular_202608056_loggedout.html  student_202604426_loggedout.html  youth_202607957_loggedin.html  youth_202607957_loggedout.html
data/: kommun_to_stadsdelar.json  process_maps.ipynb  sthlm-kommun-stadsdelar.geojson  sthlm-kommuner.geojson  sthlm-lan-alla-stadsdelar.geojson  sthlm-lan-kommuner.geojson  sthlm-stadsdelar.geojson
deployment/: README.md  config.env
frontend/: README.md  eslint.config.js  index.html  orval.config.ts  package.json  pnpm-lock.yaml  tsconfig.app.json
scratch/: all-listings-resp.json  compare_cookie_clients.out  ex1.json  homeq.ipynb  homeq.md  homeq_listing_json_1.json  homeq_search_1.json  my_queue_status.txt  (+3 more)
(+146 files in other folders)
